--- a/src/Android/Android.csproj
+++ b/src/Android/Android.csproj
@@ -82,6 +82,9 @@
     <PackageReference Include="Xamarin.AndroidX.CardView" Version="1.0.0.19" />
     <PackageReference Include="Xamarin.AndroidX.Core" Version="1.10.0" />
     <PackageReference Include="Xamarin.AndroidX.MediaRouter" Version="1.3.1.1" />
+    <PackageReference Include="System.Net.Http">
+      <Version>4.3.4</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Essentials">
       <Version>1.7.5</Version>
     </PackageReference>
@@ -102,6 +105,8 @@
     <Compile Include="Accessibility\Browser.cs" />
     <Compile Include="Accessibility\NodeList.cs" />
     <Compile Include="Accessibility\KnownUsernameField.cs" />
+    <Compile Include="AndroidCertificateContainer.cs" />
+    <Compile Include="AndroidHttpMessageHandler.cs" />
     <Compile Include="Autofill\AutofillConstants.cs" />
     <Compile Include="Autofill\AutofillHelpers.cs" />
     <Compile Include="Autofill\AutofillService.cs" />
